--- a/New DTAPP/Views/Shared/_Layout.cshtml
+++ b/New DTAPP/Views/Shared/_Layout.cshtml
@@ -49,6 +49,10 @@
                                     <li class="nav-item">
                                         <a class="dropdown-item" asp-area="" asp-controller="Spills" asp-action="Index">Spills</a>
                                     </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="" asp-controller="SpillStatuses" asp-action="Index">Spill Statuses</a>
+                                    </li>
                                     @* @if (User.IsInRole(Admin))
                                     { *@
                                         <li><hr class="dropdown-divider"></li>
