--- a/New DTAPP/Views/Spills/Create.cshtml
+++ b/New DTAPP/Views/Spills/Create.cshtml
@@ -19,7 +19,7 @@
                 {
                     <div class="row">
                         <div class="col-11">
-                            <input type="number" asp-for="TransferId" class="form-control" />
+                            <input type="number" asp-for="TransferId" class="form-control" readonly />
                         </div>
                         <div class="col-1">
                             <a target="_blank" asp-controller="Transfers" asp-action="Details" asp-route-id="@Model.TransferId">
