--- a/New DTAPP/Views/Transfers/Index.cshtml
+++ b/New DTAPP/Views/Transfers/Index.cshtml
@@ -16,8 +16,8 @@
         </p>
     <p>
         <a asp-action="Create"><img src="~/images/Add.png" title="Create Transfer"/></a>
-        @* @if (User.IsInRole(Admin) || User.IsInRole(Supervisor))
-        { *@
+        @if (User.IsInRole(Admin) || User.IsInRole(Supervisor))
+        { 
             <a asp-action="CreateExportReportstring"
             asp-controller="ReportGenerator"
             asp-route-sortOrder="@ViewBag.SortOrder"
@@ -34,7 +34,7 @@
             asp-route-filterCurrentMonth="@ViewBag.FilterCurrentMonth"
             asp-route-filterCurrentWeek="@ViewBag.FilterCurrentWeek"
                style="float:right;"><img src="~/images/draft.png" height="30" width="30" title="Generate Report" /></a>
-        @* } *@
+         } 
     </p>
 <form asp-action="Index">
     <input type="hidden" name="filtered" value="ButtonClicked" />
@@ -650,11 +650,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SpillOccurred)
-                @if (item.SpillOccurred && item.SpillId != null)
+                @if (item.SpillOccurred && item.SpillId.HasValue)
                 {
                     <a target="_blank" asp-controller="Spills" asp-action="Details" asp-route-id="@item.Spill!.SpillId"><img src="~/images/box-arrow-up-right.svg" alt="Link to Spill" height="20" width="20" title="View Spill" style="margin-left: 25px;" /></a>
                 }
-                else if (item.SpillOccurred && item.SpillId == null) {
+                else if (item.SpillOccurred && !item.SpillId.HasValue) {
                     <a target="_blank" asp-controller="Spills" asp-action="Create" asp-route-transferId="@item.TransferId"><img src="~/images/Add.png" alt="Create a Spill" height="20" width="20" title="Create Spill" style="margin-left: 25px;" /></a>
                 }
             </td>
@@ -668,10 +668,10 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.TransferId"><img src="~/images/Edit.png" height="20" width="20" title="Edit" /></a>
                 <a asp-action="Details" asp-route-id="@item.TransferId"><img src="~/images/Details.png" height="20" width="20" title="Details" /></a>
-                @* @if (User.IsInRole(Admin))
-                    { *@
-                                <a asp-action="Delete" asp-route-id="@item.TransferId"><img src="~/images/Delete.png" height="20" width="20" title="Delete" /></a>
-                    @* } *@
+                @if (User.IsInRole(Admin))
+                { 
+                    <a asp-action="Delete" asp-route-id="@item.TransferId"><img src="~/images/Delete.png" height="20" width="20" title="Delete" /></a>
+                } 
             </td>
         </tr>
 }
